Add links to the Google Books and Store pages
Users now have the ability to navigate to the Google Books
page for the book, as well as the Google Store page if they
want to purchase the book.

--- a/bookstorewindow/window/templates/window/index.html
+++ b/bookstorewindow/window/templates/window/index.html
@@ -9,8 +9,10 @@
 <ul>
 {% for book in books %}
 <li>
-  <img src="{{ book.image }}">
+  <img src="{{ book.image }}" width="128" border="1">
   {{ book.title }} by {{ book.authors }}
+  <a href="https://books.google.com/books?id={{ book.id }}" class="google-book-page">Book page</a>
+  <a href="https://play.google.com/store/books/details?id={{ book.id }}" class="google-store-page">Store page</a>
 </li>
 {% endfor %}
 </ul>
