--- a/bookstorewindow/window/templates/window/index.html
+++ b/bookstorewindow/window/templates/window/index.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 {% load crispy_forms_tags %}
 {% crispy form %}
 
@@ -19,3 +22,4 @@
 {% endfor %}
 </ul>
 {% endif %}
+{% endblock content %}
