--- a/templates/supervisor_config.j2
+++ b/templates/supervisor_config.j2
@@ -1,5 +1,5 @@
-[program:{{ application_name }}]
-command = {{ virtualenv_path }}/bin/gunicorn_start
+[program:{{ app_name }}]
+command = {{ venv_dir }}/bin/gunicorn_start
 user = {{ gunicorn_user }}
-stdout_logfile = {{ application_log_file }}
+stdout_logfile = {{ app_log_file }}
 redirect_stderr = true
