--- a/templates/gunicorn_start.j2
+++ b/templates/gunicorn_start.j2
@@ -1,37 +1,23 @@
 #!/bin/sh
 
-NAME="{{ application_name }}"
-DJANGODIR={{ project_path }}
-SOCKFILE={{ virtualenv_path }}/run/gunicorn.sock
+NAME={{ app_name }}
+DJANGODIR={{ app_dir }}
 USER={{ gunicorn_user }}
 GROUP={{ gunicorn_group }}
 NUM_WORKERS={{ gunicorn_num_workers }}
-
-# Set this to 0 for unlimited requests. During development, you might want to
-# set this to 1 to automatically restart the process on each request (i.e. your
-# code will be reloaded on every request).
 MAX_REQUESTS={{ gunicorn_max_requests }}
 
 echo "Starting $NAME as `whoami`"
 
 # Activate the virtual environment.
 cd $DJANGODIR
-. ../bin/activate
+. {{ venv_dir }}/bin/activate
 
-# Set additional environment variables.
-. ../bin/postactivate
-
-# Create the run directory if it doesn't exist.
-RUNDIR=$(dirname $SOCKFILE)
-test -d $RUNDIR || mkdir -p $RUNDIR
-
-# Programs meant to be run under supervisor should not daemonize themselves
-# (do not use --daemon).
 exec gunicorn \
     --name $NAME \
     --workers $NUM_WORKERS \
     --max-requests $MAX_REQUESTS \
     --user $USER --group $GROUP \
     --log-level debug \
-    --bind unix:$SOCKFILE \
-    {{ application_name }}.wsgi
+    --bind 0.0.0.0:8000 \
+    {{ app_name }}.wsgi
