--- a/window/templates/window/other-editions-snippet.html
+++ b/window/templates/window/other-editions-snippet.html
@@ -6,7 +6,7 @@ Other editions:
 {% if forloop.counter0 > 0 %}
 <div class="row my-1">
   <div class="btn-group">
-  <a href="https://books.google.com/books?id={{ volume.google_book_id }}" class="btn btn-outline-secondary btn-sm" role="button" target="_blank">Google Book Page</a>
+  <a href="https://books.google.com/books?id={{ volume.google_book_id }}" class="btn btn-outline-secondary btn-sm" role="button" target="_blank">More info</a>
   <a href="https://play.google.com/store/books/details?id={{ volume.google_book_id }}" role="button" class="btn btn-outline-secondary btn-sm" target="_blank">Store</a>
   </div>
 </div>
