Add publisher to book models and results
Also make volumes ordered so that results are in
a reproducible order.

--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -24,7 +24,11 @@
 
     <div class="col">
       <div class="row"><h4>{{ book.title }}</h4></div>
+
       <div class="row">{{ book.authors }}</div>
+
+      <div class="publisher row font-weight-light py-1">{{ book.publisher }}</div>
+
       {% include "window/more-info-snippet.html" with google_book_id=book.volumes.first.google_book_id %}
 
       {% if book.volumes.count > 1 %}
