Fixed margins on mobile

--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -18,7 +18,7 @@
 <div>
   <div class="row py-3 book">
 
-    <div class="col col-md-2">
+    <div class="col col-md-2 mr-n5 mr-sm-0">
       <img src="{{ book.image }}" width="128">
     </div>
 
