Remove some default text and whitespace in templates and settings

--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -24,14 +24,12 @@
 
     <div class="col">
       <div class="row">
-        <h4>{{ book.title }}{% if book.subtitle %}:
-
-        <small class="text-muted">{{ book.subtitle }}</small>
-        {% endif %}
-        </h4>
+        <h4>{{ book.title }}{% if book.subtitle %}:<small class="text-muted">{{ book.subtitle }}</small>{% endif %}</h4>
       </div>
 
-      <div class="row">{{ book.authors }}</div>
+      <div class="row">
+        {{ book.authors }}
+      </div>
 
       <div class="publisher row font-weight-light py-1">{{ book.publisher }}</div>
 
@@ -46,7 +44,6 @@
 {% endfor %}
 {% endif %}
 {% endblock content %}
-
 
 {% block javascript %}
 <script src="{% static "window/js/main.js" %}"></script>
