Improve styling of search results

--- a/window/templates/window/more-info-snippet.html
+++ b/window/templates/window/more-info-snippet.html
@@ -1,6 +1,6 @@
 <div class="row my-1">
   <a href="https://books.google.com/books?id={{ google_book_id }}" class="google-book-page">
-  <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Google Book Page">
+  <button type="button" class="btn btn-light" data-toggle="tooltip" data-placement="right" title="Google Book Page">
   More info
   </button>
   </a>
