--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -24,8 +24,14 @@
 
     <div class="col">
       <div class="row">
-        <h4>{{ book.title }}{% if book.subtitle %}:<small class="text-muted">{{ book.subtitle }}</small>{% endif %}</h4>
+        <h4>{{ book.title }}</h4>
       </div>
+
+      {% if book.subtitle %}
+      <div class="row">
+        <h5 class="text-muted">{{ book.subtitle }}</h5>
+      </div>
+      {% endif %}
 
       <div class="row">
         {{ book.authors }}
