Add collapsable descriptions for each book

--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -39,7 +39,7 @@
 
       <div class="publisher row font-weight-light py-1">{{ book.publisher }}</div>
 
-      {% include "window/more-info-snippet.html" with google_book_id=book.google_book_id %}
+      {% include "window/more-info-snippet.html" with book=book %}
 
     </div>
   </div>
