--- a/window/templates/window/more-info-snippet.html
+++ b/window/templates/window/more-info-snippet.html
@@ -1,7 +1,12 @@
 <div class="row my-1">
-  <a href="https://books.google.com/books?id={{ google_book_id }}" class="google-book-page">
-  <button type="button" class="btn btn-light" data-toggle="tooltip" data-placement="right" title="Google Book Page">
-  More info
-  </button>
+  <a class="btn btn-light" data-toggle="collapse" role="button" href="#collapse{{ book.google_book_id }}">
+    Description
+  </a>
+</div>
+
+<div class="row collapse" id="collapse{{ book.google_book_id }}">
+  <p>{{ book.description|safe }}</p>
+  <a href="https://books.google.com/books?id={{ book.google_book_id }}" target="_blank">
+    Source
   </a>
 </div>
