Add class to links to save user tests

--- a/window/templates/window/more-info-snippet.html
+++ b/window/templates/window/more-info-snippet.html
@@ -6,7 +6,7 @@
 
 <div class="row collapse" id="collapse{{ book.google_book_id }}">
   <p>{{ book.description|safe }}</p>
-  <a href="https://books.google.com/books?id={{ book.google_book_id }}" target="_blank">
+  <a class="google-book-page" href="https://books.google.com/books?id={{ book.google_book_id }}" target="_blank">
     Source
   </a>
 </div>
