Add favicon to site

--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -4,6 +4,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static "window/css/style.css" %}">
+<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 {% endblock head %}
 
 {% block content %}
