--- a/window/templates/window/index.html
+++ b/window/templates/window/index.html
@@ -7,7 +7,7 @@
 {% endblock head %}
 
 {% block content %}
-<h1 class="display-4">Bookstore Window</h1>
+<h1 class="display-4">Bookstore</h1>
 <p class="lead">Search for a book, any book.</p>
 
 {% load crispy_forms_tags %}
@@ -39,9 +39,20 @@
 
       <div class="publisher row font-weight-light py-1">{{ book.publisher }}</div>
 
-      {% include "window/more-info-snippet.html" with book=book %}
+      <div class="row my-1">
+        <a class="btn btn-light" data-toggle="collapse" role="button" href="#collapse{{ book.google_book_id }}">
+          Description
+        </a>
+      </div>
 
     </div>
+  </div>
+
+  <div class="row collapse" id="collapse{{ book.google_book_id }}">
+    <p class="py-1">{{ book.description|safe }}</p>
+    <a class="google-book-page" href="https://books.google.com/books?id={{ book.google_book_id }}" target="_blank">
+      Data Source
+    </a>
   </div>
 </div>
 {% endfor %}
